--- a/src/pages/details.html
+++ b/src/pages/details.html
@@ -16,7 +16,7 @@
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg bg-secondary bg-opacity-75 p-3" id="menu">
+    <nav class="navbar navbar-expand-lg background-color bg-opacity-75 p-3" id="menu">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="../assets/images/LogoAmazingEvents.png" class="img-fluid" alt="Logo Amazing Events">
@@ -40,7 +40,8 @@
               <a class="nav-link" href="./contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Details</a>
+              <a class="nav-link" href="#"
+                onclick="alert(`Para visualizar detalles de eventos, debes ingresar a las paginas: Home - Upcoming-Events - Past-Events`)">Details</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./stats.html">Stats</a>
@@ -57,7 +58,6 @@
 
 
   <div class="container-fluid">
-    <div class="">
       <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
         <ol class="carousel-indicators">
           <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
@@ -98,7 +98,6 @@
           <span class="visually-hidden">Siguiente</span>
         </a>
       </div>
-    </div>
   </div>
 
   <div class="container mb-5 mt-5">
@@ -106,14 +105,11 @@
       <div class="col-lg-8">
         <div class="card shadow">
           <div class="row g-0">
-            <div class="col-6 col-md-5" id="image">
+            <div class="col-8 col-md-5" id="image">
             </div>
-            <div class="col-6 col-md-7">
+            <div class="col-7 col-md-7">
               <div class="card-body d-flex flex-column">
                 <div class="h-100" id="details_card">
-                </div>
-                <div class="test">
-                  <button type="button" class="btn btn-dark">Click here!</button>
                 </div>
               </div>
             </div>
@@ -123,9 +119,9 @@
     </div>
   </div>
 
-  <footer class="footer bg-light text-center text-white">
+  <footer class="background-color">
     <!-- Grid container -->
-    <div class="p-12 pb-0" class="container1">
+    <div class="p-12 pb-0 background-color" class="container1">
       <!-- Section: Social media -->
       <div class="mb-4 bg-secondary bg-opacity-75">
         <div class="text-start p-3 text-white">
@@ -160,7 +156,9 @@
               role="button"><i class="bi bi-github"></i>
             </a>
           </div>
-          © 2023
+          <div class="d-flex justify-content-lg-evenly copyright">
+          © 2023 Todos los derechos reservados - MindHub Cohorte 14 - Grupo #3
+          </div>
         </div>
       </div>
       <!-- Section: Social media -->
@@ -170,7 +168,13 @@
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
     integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
     crossorigin="anonymous"></script>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
   <script src="../lib/Js-page2.js" type="text/javascript"></script>
 
   </script>
