--- a/src/pages/past-events.html
+++ b/src/pages/past-events.html
@@ -12,15 +12,13 @@
   <link href="https://getbootstrap.com/docs/5.3/assets/css/docs.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.3/font/bootstrap-icons.css">
   <link rel="stylesheet" href="../css/styles.css">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-
+  
 
 </head>
 
 <body>
   <header>
-    <nav class="navbar navbar-expand-lg bg-secondary bg-opacity-75 p-3" id="menu">
+    <nav class="navbar navbar-expand-lg background-color bg-opacity-75 p-3" id="menu">
       <div class="container-fluid">
         <a class="navbar-brand" href="#"> <img src="../assets/images/LogoAmazingEvents.png" class="img-fluid"
             alt="Logo Amazing Events">
@@ -44,7 +42,8 @@
               <a class="nav-link" href="./contact.html">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="./details.html">Details</a>
+              <a class="nav-link" href="#"
+                onclick="alert(`Para visualizar detalles de eventos, debes ingresar a las paginas: Home - Upcoming-Events - Past-Events`)">Details</a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="./stats.html">Stats</a>
@@ -60,72 +59,80 @@
       </div>
     </nav>
   </header>
-  <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
-    <ol class="carousel-indicators">
-      <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
-      <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
-      <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img src="../assets/images/eventos ejecutivos.jpg" class="d-table" alt="Imagen 1">
-        <div class="carousel-caption top-0 mt-4 d-none d-md-block">
-          <p class="display-1 fw-bolder text-capitalize mt-5 text-warning ">past event</p>
+  <div class="container-flex">
+    <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
+      <ol class="carousel-indicators">
+        <li data-bs-target="#carousel1" data-bs-slide-to="0" class="active"></li>
+        <li data-bs-target="#carousel1" data-bs-slide-to="1"></li>
+        <li data-bs-target="#carousel1" data-bs-slide-to="2"></li>
+        
+      </ol>
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <div class="img_event1">
+          </div>
+          <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+            <p class="display-1 fw-bolder  text-capitalize text-warning">Past-Events</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="img_event2">
+
+          </div>
+          <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+            <p class="display-1 fw-bolder text-capitalize text-warning ">Past-Events</p>
+          </div>
+        </div>
+        <div class="carousel-item">
+          <div class="img_event3">
+
+          </div>
+          <div class="carousel-caption top-0 mt-4 d-none d-md-block">
+            <p class="display-1 fw-bolder text-capitalize text-warning ">Past-Events</p>
+          </div>
         </div>
       </div>
-      <div class="carousel-item">
-        <img src="../assets/images/eventos musicales.jpg" class="d-table" alt="Imagen 2">
-        <div class="carousel-caption top-0 mt-4 d-none d-md-block">
-          <p class="display-1 fw-bolder text-capitalize mt-5 text-warning ">past events</p>
-        </div>
-      </div>
-      <div class="carousel-item">
-        <img src="../assets/images/eventos para bodas.jpg" class="d-table" alt="Imagen 3">
-        <div class="carousel-caption top-0 mt-4 d-none d-md-block">
-          <p class="display-1 fw-bolder text-capitalize mt-5 text-warning ">past events</p>
-        </div>
-      </div>
+      <a class="carousel-control-prev" href="#carousel1" role="button" data-bs-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Anterior</span>
+      </a>
+      <a class="carousel-control-next" href="#carousel1" role="button" data-bs-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="visually-hidden">Siguiente</span>
+      </a>
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Anterior</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="visually-hidden">Siguiente</span>
-    </a>
   </div>
   <div>
-  <div class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="navbar navbar-expand-lg background-color bg-body-tertiary">
     <div class="container-fluid">
-      <div class="collapse navbar-collapse container-category" id="navbarSupportedConten2">
+      <div class="collapse navbar-collapse container-category" id="navbarSupportedContent2">
         <ul class="navbar-nav me-auto mb-2 mb-lg-0 check-container">
           <li class="nav-item">
             <input type="checkbox" id="cbox1" value="second_checkbox">
-            <label for="cbox1">Category</label>
+            <label for="cbox1">Film</label>
           </li>
 
           <li class="nav-item dropdown">
             <input type="checkbox" id="cbox2" value="second_checkbox">
-            <label for="cbox2">Category</label>
+            <label for="cbox2">Sports</label>
           </li>
           <li class="nav-item">
             <input type="checkbox" id="cbox3" value="second_checkbox">
-            <label for="cbox3">Category</label>
+            <label for="cbox3">Theater</label>
           </li>
           <li class="nav-item">
             <input type="checkbox" id="cbox4" value="second_checkbox">
-            <label for="cbox4">Category</label>
+            <label for="cbox4">Festival</label>
           </li>
           <li class="nav-item">
             <input type="checkbox" id="cbox5" value="second_checkbox">
-            <label for="cbox5">Category</label>
+            <label for="cbox5">Concert</label>
           </li>
         </ul>
 
         <form class="d-flex" role="search">
-          <input class="form-control me-2" type="search" placeholder="" aria-label="Search">
-          <button class="btn btn-outline-success" type="submit">
+          <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+          <button class="btn btn-success" type="submit">
             Search
           </button>
         </form>
@@ -167,52 +174,62 @@
       </div>
     </div>
   </div>
-  <footer class="bg-light text-center text-white">
+  <footer class="background-color">
     <!-- Grid container -->
-    <div class="container p-12 pb-0">
-      <!-- div: Social media -->
+    <div class="p-12 pb-0 background-color" class="container1">
+      <!-- Section: Social media -->
       <div class="mb-4 bg-secondary bg-opacity-75">
         <div class="text-start p-3 text-white">
           <div>
             <!-- Facebook -->
-            <a class="btn text-white btn-floating m-1" style="background-color: #3b5998" href="#!" role="button"><i
-                class="bi bi-facebook"></i>
+            <a class="btn text-white btn-floating m-1" style="background-color: #3b5998"
+              href="https://es-la.facebook.com/" role="button"><i class="bi bi-facebook"></i>
             </a>
 
             <!-- Twitter -->
-            <a class="btn text-white btn-floating m-1" style="background-color: #55acee" href="#!" role="button"><i
-                class="bi bi-twitter"></i>
+            <a class="btn text-white btn-floating m-1" style="background-color: #55acee"
+              href="https://twitter.com/?lang=es" role="button"><i class="bi bi-twitter"></i>
             </a>
 
             <!-- Google -->
-            <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39" href="#!" role="button"><i
-                class="bi bi-google"></i>
+            <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39"
+              href="https://www.google.com/?hl=es" role="button"><i class="bi bi-google"></i>
             </a>
 
             <!-- Instagram -->
-            <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac" href="#!" role="button"><i
-                class="bi bi-instagram"></i>
+            <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac"
+              href="https://www.instagram.com/" role="button"><i class="bi bi-instagram"></i>
             </a>
 
             <!-- Linkedin -->
-            <a class="btn text-white btn-floating m-1" style="background-color: #0082ca" href="#!" role="button"><i
-                class="bi bi-linkedin"></i>
+            <a class="btn text-white btn-floating m-1" style="background-color: #0082ca" href="https://co.linkedin.com/"
+              role="button"><i class="bi bi-linkedin"></i>
             </a>
 
             <!-- Github -->
-            <a class="btn text-white btn-floating m-1" style="background-color: #333333" href="#!" role="button"><i
-                class="bi bi-github"></i>
+            <a class="btn text-white btn-floating m-1" style="background-color: #333333" href="https://github.com/"
+              role="button"><i class="bi bi-github"></i>
             </a>
           </div>
-          © 2023
+          <div class="d-flex justify-content-lg-evenly copyright">
+          © 2023 Todos los derechos reservados - MindHub Cohorte 14 - Grupo #3
+          </div>
         </div>
       </div>
-      <!-- div: Social media -->
+      <!-- Section: Social media -->
     </div>
+
   </footer>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
-      integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
-      crossorigin="anonymous"></script>
+    integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
+    crossorigin="anonymous"></script>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+    <script src="js/bootstrap.min.js"></script>
+    <script>
+        $(function () {
+            $('[data-toggle="tooltip"]').tooltip();
+        });
+    </script>
   
 </body>
 
