--- a/src/pages/stats.html
+++ b/src/pages/stats.html
@@ -16,7 +16,7 @@
 
 <body>
     <header>
-        <nav class="navbar navbar-expand-lg bg-secondary bg-opacity-75 p-3" id="menu">
+        <nav class="navbar navbar-expand-lg background-color bg-opacity-75 p-3" id="menu">
             <div class="container-fluid">
               <a class="navbar-brand" href="#"> <img src="../assets/images/LogoAmazingEvents.png" class="img-fluid"
                   alt="Logo Amazing Events">
@@ -40,7 +40,8 @@
                     <a class="nav-link" href="./contact.html">Contact</a>
                   </li>
                   <li class="nav-item">
-                    <a class="nav-link" href="./details.html">Details</a>
+                    <a class="nav-link" href="#"
+                      onclick="alert(`Para visualizar detalles de eventos, debes ingresar a las paginas: Home - Upcoming-Events - Past-Events`)">Details</a>
                   </li>
                   <li class="nav-item">
                     <a class="nav-link" href="./stats.html">Stats</a>
@@ -56,41 +57,49 @@
             </div>
           </nav>
     </header>
-    <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="carousel">
+    <div class="container-flex">
+      <div id="carousel1" class="carousel slide" data-bs-ride="carousel">
         <ol class="carousel-indicators">
-          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"></li>
-          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></li>
-          <li data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></li>
+          <li data-bs-target="#carousel1" data-bs-slide-to="0" class="active"></li>
+          <li data-bs-target="#carousel1" data-bs-slide-to="1"></li>
+          <li data-bs-target="#carousel1" data-bs-slide-to="2"></li>
+          
         </ol>
         <div class="carousel-inner">
           <div class="carousel-item active">
-            <img src="../assets/images/eventos ejecutivos.jpg" class="d-table" alt="Imagen 1">
+            <div class="img_event1">
+            </div>
             <div class="carousel-caption top-0 mt-4 d-none d-md-block">
-              <p class="display-1 fw-bolder text-capitalize mt-5 text-warning ">stats</p>
+              <p class="display-1 fw-bolder  text-capitalize text-warning">Stats</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../assets/images/eventos musicales.jpg" class="d-table" alt="Imagen 2">
+            <div class="img_event2">
+  
+            </div>
             <div class="carousel-caption top-0 mt-4 d-none d-md-block">
-              <p class="display-1 fw-bolder text-capitalize mt-5 text-warning ">stats</p>
+              <p class="display-1 fw-bolder text-capitalize text-warning ">Stats</p>
             </div>
           </div>
           <div class="carousel-item">
-            <img src="../assets/images/eventos para bodas.jpg" class="d-table" alt="Imagen 3">
+            <div class="img_event3">
+  
+            </div>
             <div class="carousel-caption top-0 mt-4 d-none d-md-block">
-              <p class="display-1 fw-bolder text-capitalize mt-5 text-warning ">stats</p>
+              <p class="display-1 fw-bolder text-capitalize text-warning ">Stats</p>
             </div>
           </div>
         </div>
-        <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-bs-slide="prev">
+        <a class="carousel-control-prev" href="#carousel1" role="button" data-bs-slide="prev">
           <span class="carousel-control-prev-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Anterior</span>
         </a>
-        <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-bs-slide="next">
+        <a class="carousel-control-next" href="#carousel1" role="button" data-bs-slide="next">
           <span class="carousel-control-next-icon" aria-hidden="true"></span>
           <span class="visually-hidden">Siguiente</span>
         </a>
       </div>
+    </div>
       <div>
     <div class="container mt-3 mb-2">
         <div class="row">
@@ -223,55 +232,62 @@
     </div>
 
 
-    <footer class="bg-light text-center text-white">
-        <!-- Grid container -->
-        <div class="container p-12 pb-0">
-            <!-- Section: Social media -->
-            <div class="mb-4 bg-secondary bg-opacity-75">
-                <div class="text-start p-3 text-white">
-                    <div>
-                        <!-- Facebook -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #3b5998" href="#!"
-                            role="button"><i class="bi bi-facebook"></i>
-                        </a>
-
-                        <!-- Twitter -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #55acee" href="#!"
-                            role="button"><i class="bi bi-twitter"></i>
-                        </a>
-
-                        <!-- Google -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39" href="#!"
-                            role="button"><i class="bi bi-google"></i>
-                        </a>
-
-                        <!-- Instagram -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac" href="#!"
-                            role="button"><i class="bi bi-instagram"></i>
-                        </a>
-
-                        <!-- Linkedin -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #0082ca" href="#!"
-                            role="button"><i class="bi bi-linkedin"></i>
-                        </a>
-
-                        <!-- Github -->
-                        <a class="btn text-white btn-floating m-1" style="background-color: #333333" href="#!"
-                            role="button"><i class="bi bi-github"></i>
-                        </a>
-                    </div>
-                    © 2023
-                </div>
+    <footer class="background-color">
+      <!-- Grid container -->
+      <div class="p-12 pb-0 background-color" class="container1">
+        <!-- Section: Social media -->
+        <div class="mb-4 bg-secondary bg-opacity-75">
+          <div class="text-start p-3 text-white">
+            <div>
+              <!-- Facebook -->
+              <a class="btn text-white btn-floating m-1" style="background-color: #3b5998"
+                href="https://es-la.facebook.com/" role="button"><i class="bi bi-facebook"></i>
+              </a>
+  
+              <!-- Twitter -->
+              <a class="btn text-white btn-floating m-1" style="background-color: #55acee"
+                href="https://twitter.com/?lang=es" role="button"><i class="bi bi-twitter"></i>
+              </a>
+  
+              <!-- Google -->
+              <a class="btn text-white btn-floating m-1" style="background-color: #dd4b39"
+                href="https://www.google.com/?hl=es" role="button"><i class="bi bi-google"></i>
+              </a>
+  
+              <!-- Instagram -->
+              <a class="btn text-white btn-floating m-1" style="background-color: #ac2bac"
+                href="https://www.instagram.com/" role="button"><i class="bi bi-instagram"></i>
+              </a>
+  
+              <!-- Linkedin -->
+              <a class="btn text-white btn-floating m-1" style="background-color: #0082ca" href="https://co.linkedin.com/"
+                role="button"><i class="bi bi-linkedin"></i>
+              </a>
+  
+              <!-- Github -->
+              <a class="btn text-white btn-floating m-1" style="background-color: #333333" href="https://github.com/"
+                role="button"><i class="bi bi-github"></i>
+              </a>
             </div>
-            <!-- Section: Social media -->
-
-
-
+            <div class="d-flex justify-content-lg-evenly copyright">
+            © 2023 Todos los derechos reservados - MindHub Cohorte 14 - Grupo #3
+            </div>
+          </div>
         </div>
+        <!-- Section: Social media -->
+      </div>
+  
     </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.bundle.min.js"
       integrity="sha384-JEW9xMcG8R+pH31jmWH6WWP0WintQrMb4s7ZOdauHnUtxwoG2vI5DkLtS3qm9Ekf"
       crossorigin="anonymous"></script>
+      <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
+      <script src="js/bootstrap.min.js"></script>
+      <script>
+          $(function () {
+              $('[data-toggle="tooltip"]').tooltip();
+          });
+      </script>
 </body>
 
 </html>
